# minigenjax

./: .gitignore  .pre-commit-config.yaml  README.md  minigenjax.py  pyproject.toml  the-diffs.txt
.github/workflows/: pyright.yml  release.yml
notebook/: curve-fit.py  localization-tutorial.py
src/: __init__.py  minigenjax.py  print_jaxprs.py  test_minigenjax.py
src/minigenjax/: __init__.py  assess.py  core.py  distribution.py  key.py  minigenjax.py  primitive.py  pytree.py  simulate.py  test_from_genjax.py  test_localization.py  test_minigenjax.py  trace.py  transform.py  types.py  update.py
test/: test_minigenjax.py
