[tool.poetry]
name = "minigenjax"
version = "0.1.0"
description = ""
authors = ["Colin Smith <colin.smith@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tensorflow-probability = {extras = ["jax"], version = "^0.24.0"}
jax = "0.4.35"
jaxtyping = "^0.2.34"
numpy = "<2.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
include = ["src"]

[tool.ruff.lint.per-file-ignores]
# OK to `from _ import *` in  unit tests
"test/test_*.py" = ["F403", "F405"]
